--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
     <script>
       const root = document.getElementById("root");
-      const span = React.createElement(
-        "span",
-        { style: { color: "red" } },
+      const h3 = React.createElement(
+        "h3",
+        {
+          title: "title",
+          onMouseEnter: () => console.log("Mouse enter"),
+        },
         "Hello, I'm a span."
       );
+      const button = React.createElement(
+        "button",
+        {
+          onClick: () => console.log("I'm clicked"),
+          style: {
+            backgroundColor: "tomato",
+          },
+        },
+        "Click me"
+      );
+      const div = React.createElement("div", null, [h3, button]);
 
-      ReactDOM.render(span, root);
+      ReactDOM.render(div, root);
     </script>
   </body>
 </html>
