--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
     <div id="root"></div>
     <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-    <script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel">
       const root = document.getElementById("root");
-      const h3 = React.createElement(
-        "h3",
-        {
-          title: "title",
-          onMouseEnter: () => console.log("Mouse enter"),
-        },
-        "Hello, I'm a span."
+
+      const h3 = (
+        <h3 id="title" onMouseEnter={() => console.log("Mouse enter")}>
+          Hello I'm a title.
+        </h3>
       );
-      const button = React.createElement(
-        "button",
-        {
-          onClick: () => console.log("I'm clicked"),
-          style: {
+      const button = (
+        <button
+          style={{
             backgroundColor: "tomato",
-          },
-        },
-        "Click me"
+          }}
+          onClick={() => console.log("I'm clicked")}
+        >
+          Click me
+        </button>
       );
       const div = React.createElement("div", null, [h3, button]);
 
