refactor(`index.html`): Make `Title`, `Button`, and `Container` components

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <script type="text/babel">
       const root = document.getElementById("root");
 
-      const h3 = (
+      const Title = () => (
         <h3 id="title" onMouseEnter={() => console.log("Mouse enter")}>
           Hello I'm a title.
         </h3>
       );
-      const button = (
+
+      const Button = () => (
         <button
           style={{
             backgroundColor: "tomato",
@@ -29,9 +30,15 @@
           Click me
         </button>
       );
-      const div = React.createElement("div", null, [h3, button]);
 
-      ReactDOM.render(div, root);
+      const Container = () => (
+        <div>
+          <Title />
+          <Button />
+        </div>
+      );
+
+      ReactDOM.render(<Container />, root);
     </script>
   </body>
 </html>
