--- a/index.html
+++ b/index.html
@@ -14,31 +14,25 @@
     <script type="text/babel">
       const root = document.getElementById("root");
 
-      const Title = () => (
-        <h3 id="title" onMouseEnter={() => console.log("Mouse enter")}>
-          Hello I'm a title.
-        </h3>
-      );
+      let counter = 0;
 
-      const Button = () => (
-        <button
-          style={{
-            backgroundColor: "tomato",
-          }}
-          onClick={() => console.log("I'm clicked")}
-        >
-          Click me
-        </button>
-      );
+      function countUp() {
+        counter += 1;
+        render();
+      }
+
+      function render() {
+        ReactDOM.render(<Container />, root);
+      }
 
       const Container = () => (
         <div>
-          <Title />
-          <Button />
+          <h3 id="title">Total clicks: {counter}</h3>
+          <button onClick={countUp}>Click me</button>
         </div>
       );
 
-      ReactDOM.render(<Container />, root);
+      render();
     </script>
   </body>
 </html>
