--- a/index.html
+++ b/index.html
@@ -14,25 +14,21 @@
     <script type="text/babel">
       const root = document.getElementById("root");
 
-      let counter = 0;
+      const App = () => {
+        const [counter, setCounter] = React.useState(0);
+        const onClick = () => {
+          setCounter(counter + 1);
+        };
 
-      function countUp() {
-        counter += 1;
-        render();
-      }
+        return (
+          <div>
+            <h3 id="title">Total clicks: {counter}</h3>
+            <button onClick={onClick}>Click me</button>
+          </div>
+        );
+      };
 
-      function render() {
-        ReactDOM.render(<Container />, root);
-      }
-
-      const Container = () => (
-        <div>
-          <h3 id="title">Total clicks: {counter}</h3>
-          <button onClick={countUp}>Click me</button>
-        </div>
-      );
-
-      render();
+      ReactDOM.render(<App />, root);
     </script>
   </body>
 </html>
