--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
       const root = document.getElementById("root");
 
       const App = () => {
-        const [counter, setCounter] = React.useState(0);
-        const onClick = () => {
-          setCounter((current) => current + 1);
+        const [minutes, setMinutes] = React.useState();
+        const onChange = (event) => {
+          setMinutes(event.target.value);
         };
 
         return (
           <div>
-            <h3 id="title">Total clicks: {counter}</h3>
-            <button onClick={onClick}>Click me</button>
+            <h1>Unit Converter</h1>
+            <label htmlFor="minutes">Minutes</label>
+            <input
+              id="minutes"
+              onChange={onChange}
+              placeholder="Minutes"
+              type="number"
+              value={minutes}
+            />
+            <h4>You want to convert {minutes}</h4>
+            <label htmlFor="hours">Hours</label>
+            <input id="hours" placeholder="Hours" type="number" />
           </div>
         );
       };
