--- a/index.html
+++ b/index.html
@@ -15,25 +15,37 @@
       const root = document.getElementById("root");
 
       const App = () => {
-        const [minutes, setMinutes] = React.useState();
+        const [minutes, setMinutes] = React.useState(0);
         const onChange = (event) => {
           setMinutes(event.target.value);
         };
 
+        const reset = () => setMinutes(0);
+
         return (
           <div>
             <h1>Unit Converter</h1>
-            <label htmlFor="minutes">Minutes</label>
-            <input
-              id="minutes"
-              onChange={onChange}
-              placeholder="Minutes"
-              type="number"
-              value={minutes}
-            />
-            <h4>You want to convert {minutes}</h4>
-            <label htmlFor="hours">Hours</label>
-            <input id="hours" placeholder="Hours" type="number" />
+            <div>
+              <label htmlFor="minutes">Minutes</label>
+              <input
+                id="minutes"
+                onChange={onChange}
+                placeholder="Minutes"
+                type="number"
+                value={minutes}
+              />
+            </div>
+            <div>
+              <label htmlFor="hours">Hours</label>
+              <input
+                disabled
+                id="hours"
+                placeholder="Hours"
+                type="number"
+                value={Math.round(minutes / 60)}
+              />
+            </div>
+            <button onClick={reset}>Reset</button>
           </div>
         );
       };
