--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
       const root = document.getElementById("root");
 
       const App = () => {
-        const [minutes, setMinutes] = React.useState(0);
+        const [time, setTime] = React.useState(0);
+        const [isInverted, setIsInverted] = React.useState(false);
+
         const onChange = (event) => {
-          setMinutes(event.target.value);
+          setTime(event.target.value);
         };
 
-        const reset = () => setMinutes(0);
+        const reset = () => setTime(0);
+        const invert = () => {
+          reset();
+          setIsInverted((current) => !current);
+        };
 
         return (
           <div>
@@ -28,24 +34,29 @@
             <div>
               <label htmlFor="minutes">Minutes</label>
               <input
+                disabled={isInverted}
                 id="minutes"
                 onChange={onChange}
                 placeholder="Minutes"
                 type="number"
-                value={minutes}
+                value={isInverted ? time * 60 : time}
               />
             </div>
             <div>
               <label htmlFor="hours">Hours</label>
               <input
-                disabled
+                disabled={!isInverted}
                 id="hours"
+                onChange={onChange}
                 placeholder="Hours"
                 type="number"
-                value={Math.round(minutes / 60)}
+                value={isInverted ? time : Math.round(time / 60)}
               />
             </div>
             <button onClick={reset}>Reset</button>
+            <button onClick={invert}>
+              {isInverted ? "Turn back" : "Invert"}
+            </button>
           </div>
         );
       };
