--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
-      const root = document.getElementById("root");
-
-      const App = () => {
+      const TimeConverter = () => {
         const [time, setTime] = React.useState(0);
         const [isInverted, setIsInverted] = React.useState(false);
 
@@ -30,12 +28,11 @@
 
         return (
           <div>
-            <h1>Unit Converter</h1>
             <div>
-              <label htmlFor="minutes">Minutes</label>
+              <label htmlFor="minute">Minutes</label>
               <input
                 disabled={isInverted}
-                id="minutes"
+                id="minute"
                 onChange={onChange}
                 placeholder="Minutes"
                 type="number"
@@ -43,10 +40,10 @@
               />
             </div>
             <div>
-              <label htmlFor="hours">Hours</label>
+              <label htmlFor="hour">Hours</label>
               <input
                 disabled={!isInverted}
-                id="hours"
+                id="hour"
                 onChange={onChange}
                 placeholder="Hours"
                 type="number"
@@ -61,6 +58,76 @@
         );
       };
 
+      const DistanceConverter = () => {
+        const [distance, setDistance] = React.useState(0);
+        const [isInverted, setIsInverted] = React.useState(false);
+
+        const onChange = (event) => {
+          setDistance(event.target.value);
+        };
+
+        const reset = () => setDistance(0);
+        const invert = () => {
+          reset();
+          setIsInverted((current) => !current);
+        };
+
+        return (
+          <div>
+            <div>
+              <label htmlFor="km">Km</label>
+              <input
+                disabled={isInverted}
+                id="km"
+                onChange={onChange}
+                placeholder="Km"
+                type="number"
+                value={isInverted ? Math.round(distance * 1.609344) : distance}
+              />
+            </div>
+            <div>
+              <label htmlFor="mile">Miles</label>
+              <input
+                disabled={!isInverted}
+                id="mile"
+                onChange={onChange}
+                placeholder="Miles"
+                type="number"
+                value={isInverted ? distance : Math.round(distance * 0.62137)}
+              />
+            </div>
+            <button onClick={reset}>Reset</button>
+            <button onClick={invert}>
+              {isInverted ? "Turn back" : "Invert"}
+            </button>
+          </div>
+        );
+      };
+
+      const App = () => {
+        const [value, setValue] = React.useState("-1");
+
+        const onSelect = (event) => {
+          setValue(event.target.value);
+        };
+
+        return (
+          <div>
+            <h1>Unit Converter</h1>
+            <select value={value} onChange={onSelect}>
+              <option value="-1">Select your units</option>
+              <option value="0">Minutes & Hours</option>
+              <option value="1">Km & Miles</option>
+            </select>
+            <hr />
+            {value === "-1" ? "Please select your units" : null}
+            {value === "0" ? <TimeConverter /> : null}
+            {value === "1" ? <DistanceConverter /> : null}
+          </div>
+        );
+      };
+
+      const root = document.getElementById("root");
       ReactDOM.render(<App />, root);
     </script>
   </body>
