--- a/unit-converter.html
+++ b/unit-converter.html
@@ -84,7 +84,7 @@
         return (
           <div>
             <h1>Unit Converter</h1>
-            <select value={value} onChange={onSelect}>
+            <select onChange={onSelect} value={value}>
               <option value="-1">Select your units</option>
               <option value="0">Minutes & Hours</option>
               <option value="1">Km & Miles</option>
